--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "start": "next start",
-    "build:local": "env-cmd -f ./.env.development next build",
+    "build": "env-cmd -f ./.env.development next build",
     "production": "env-cmd -f ./.env.production next build",
     "production:start": "env-cmd -f ./.env.production next start",
     "testing": "env-cmd -f ./.env.testing next build",
@@ -34,13 +34,15 @@
   },
   "dependencies": {
     "accept-language": "^3.0.18",
+    "framer-motion": "^10.16.0",
     "i18next": "^22.5.1",
     "i18next-browser-languagedetector": "^7.0.2",
     "i18next-resources-to-backend": "^1.1.4",
-    "next": "13.4.5",
+    "next": "^13.4.18",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-i18next": "^12.3.1"
+    "react-i18next": "^12.3.1",
+    "server-only": "^0.0.1"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
@@ -68,6 +70,7 @@
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "start-server-and-test": "^2.0.0",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   },
