--- a/packages/shared-components/package.json
+++ b/packages/shared-components/package.json
@@ -41,13 +41,14 @@
   "devDependencies": {
     "@types/react": "^18.2.5",
     "autoprefixer": "^10.4.14",
+    "eslint": "^8.48.0",
     "eslint-config-custom": "workspace:*",
     "postcss": "^8.4.20",
     "prettier-plugin-tailwindcss": "^0.5.3",
     "react": "^18.2.0",
-    "tailwind-config": "*",
+    "tailwind-config": "workspace:*",
     "tailwind-merge": "^1.14.0",
-    "tsconfig": "*",
+    "tsconfig": "workspace:*",
     "tsup": "^6.1.3",
     "typescript": "^5.1.6"
   }
