Move banner / util / icons to packages

--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -23,7 +23,8 @@
     "react-dom": "18.2.0",
     "react-i18next": "^12.3.1",
     "server-only": "^0.0.1",
-    "ui": "workspace:^"
+    "ui": "workspace:*",
+    "utils": "workspace:*"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.4.19",
