--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -36,7 +36,8 @@
   },
   "peerDependencies": {
     "framer-motion": "^10.16.1",
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "utils": "workspace:*"
   },
   "devDependencies": {
     "@types/react": "^18.2.5",
@@ -50,6 +51,7 @@
     "tailwind-merge": "^1.14.0",
     "tsconfig": "workspace:*",
     "tsup": "^6.1.3",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "utils": "workspace:^"
   }
 }
