--- a/apps/next/tsconfig.json
+++ b/apps/next/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "tsconfig/nextjs.json",
   "compilerOptions": {
+    "plugins": [{ "name": "next" }],
     "paths": {
       "@/*": ["./src/*"],
       "@/components/*": ["./src/components/*"],
@@ -8,5 +9,5 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules", ".next", "coverage", "**/__tests__/**/*.[jt]s?(x)"]
+  "exclude": ["node_modules", ".next", ".turbo", "coverage", "**/__tests__/**/*.[jt]s?(x)"]
 }
