--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -49,9 +49,10 @@
     "react": "^18.2.0",
     "tailwind-config": "workspace:*",
     "tailwind-merge": "^1.14.0",
+    "tailwindcss": "^3.3.3",
     "tsconfig": "workspace:*",
     "tsup": "^6.1.3",
     "typescript": "^5.1.6",
-    "utils": "workspace:^"
+    "utils": "workspace:*"
   }
 }
