--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,7 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "globalDependencies": ["**/.env.*local"],
+  "globalDependencies": ["**/.env.development"],
+  "globalEnv": ["NEXT_PUBLIC_ENV", "NEXT_PUBLIC_BASE_URL"],
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
