contact form WIP

--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -19,8 +19,10 @@
     "i18next-browser-languagedetector": "^7.0.2",
     "i18next-resources-to-backend": "^1.1.4",
     "next": "^13.4.18",
+    "node-mailer": "^0.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.46.1",
     "react-i18next": "^12.3.1",
     "server-only": "^0.0.1",
     "ui": "workspace:*",
