--- a/apps/next/.env.example
+++ b/apps/next/.env.example
@@ -2,3 +2,10 @@ NEXT_PUBLIC_ENV=development
 
 # Public URL / domain URL
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
+
+
+# Email
+EMAIL_HOST=;
+EMAIL_PORT=;
+EMAIL_USER=;
+EMAIL_PASSWORD=;
