--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -18,8 +18,8 @@
     "i18next": "^23.4.6",
     "i18next-browser-languagedetector": "^7.0.2",
     "i18next-resources-to-backend": "^1.1.4",
-    "next": "^13.4.18",
-    "node-mailer": "^0.1.1",
+    "next": "^14.0.2",
+    "nodemailer": "^6.9.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
@@ -35,6 +35,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "@types/grecaptcha": "^3.0.4",
     "@types/node": "20.3.0",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "18.2.11",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
