--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "eslint": "^8.47.0",
     "prettier": "^3.0.2",
     "tsconfig": "*",
-    "turbo": "latest"
+    "turbo": "^1.10.16"
   },
   "name": "turbo",
   "packageManager": "yarn@3.4.1",
