--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -10,7 +10,8 @@
     "format:write": "prettier --write \"**/*.{js,jsx,ts,tsx,json}\"",
     "types": "tsc --noEmit",
     "lint": "npm run types && next lint && eslint . --ext .ts,.tsx,.js,.jsx",
-    "lint:fix": "eslint . --ext .ts,.tsx,.js,.jsx --fix"
+    "lint:fix": "eslint . --ext .ts,.tsx,.js,.jsx --fix",
+    "pre:commit": "lint-staged"
   },
   "dependencies": {
     "accept-language": "^3.0.18",
@@ -42,6 +43,7 @@
     "env-cmd": "^10.1.0",
     "eslint": "^8.42.0",
     "eslint-config-custom": "workspace:*",
+    "lint-staged": "^15.0.2",
     "postcss": "8.4.24",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
@@ -50,5 +52,13 @@
     "tailwindcss": "3.3.2",
     "tsconfig": "workspace:*",
     "typescript": "5.1.3"
+  },
+  "lint-staged": {
+    "**/*.{ts,js,tsx,jsx}": [
+      "yarn lint"
+    ],
+    "**/*.{ts,js,tsx,jsx,json,yml}": [
+      "yarn format:write"
+    ]
   }
 }
