--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
     "build": "turbo run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "postinstall": "husky install"
   },
   "devDependencies": {
     "eslint": "^8.47.0",
+    "husky": "^8.0.0",
     "prettier": "^3.0.2",
     "tsconfig": "*",
     "turbo": "^1.10.16"
