--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -37,8 +37,8 @@
     "@types/grecaptcha": "^3.0.4",
     "@types/node": "20.3.0",
     "@types/nodemailer": "^6.4.14",
-    "@types/react": "18.2.11",
-    "@types/react-dom": "18.2.4",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
     "autoprefixer": "10.4.14",
     "env-cmd": "^10.1.0",
     "eslint": "^8.42.0",
@@ -51,7 +51,7 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
     "tsconfig": "workspace:*",
-    "typescript": "5.1.3"
+    "typescript": "^5.2.2"
   },
   "lint-staged": {
     "**/*.{ts,js,tsx,jsx}": [
