--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "postinstall": "husky install"
+    "postinstall": "husky install",
+    "pre:commit": "turbo run pre:commit"
   },
   "devDependencies": {
     "eslint": "^8.47.0",
