--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -32,10 +32,11 @@
     "build": "tsup",
     "lint": "eslint src/**/* --ext .ts,.tsx,.js,.jsx",
     "dev": "tsup --watch",
-    "check-types": "tsc --noEmit"
+    "check-types": "tsc --noEmit",
+    "pre:commit": "lint-staged"
   },
   "peerDependencies": {
-    "framer-motion": "^10.16.1",
+    "framer-motion": "^10.x.x",
     "react": "^18.2.0",
     "utils": "workspace:*"
   },
@@ -44,6 +45,7 @@
     "autoprefixer": "^10.4.14",
     "eslint": "^8.48.0",
     "eslint-config-custom": "workspace:*",
+    "lint-staged": "^15.0.2",
     "postcss": "^8.4.20",
     "prettier-plugin-tailwindcss": "^0.5.3",
     "react": "^18.2.0",
@@ -54,5 +56,13 @@
     "tsup": "^6.1.3",
     "typescript": "^5.1.6",
     "utils": "workspace:*"
+  },
+  "lint-staged": {
+    "**/*.{ts,js,tsx,jsx}": [
+      "yarn lint"
+    ],
+    "**/*.{ts,js,tsx,jsx,json,yml}": [
+      "yarn format:write"
+    ]
   }
 }
