--- a/.gitignore
+++ b/.gitignore
@@ -29,8 +29,8 @@ yarn-error.log*
 .env.local
 .env.development
 .env.development.local
-.env.test.local
-.env.production.local
+.env.test
+.env.production
 
 # turbo
 .turbo
