--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -26,8 +26,8 @@
     "react-hook-form": "^7.46.1",
     "react-i18next": "^12.3.1",
     "server-only": "^0.0.1",
-    "ui": "workspace:*",
-    "utils": "workspace:*"
+    "ui": "*",
+    "utils": "*"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.4.19",
@@ -42,15 +42,15 @@
     "autoprefixer": "10.4.14",
     "env-cmd": "^10.1.0",
     "eslint": "^8.42.0",
-    "eslint-config-custom": "workspace:*",
+    "eslint-config-custom": "*",
     "lint-staged": "^15.0.2",
     "postcss": "8.4.24",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
-    "tailwind-config": "workspace:*",
+    "tailwind-config": "*",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
-    "tsconfig": "workspace:*",
+    "tsconfig": "*",
     "typescript": "^5.2.2"
   },
   "lint-staged": {
