--- a/apps/next/.env.example
+++ b/apps/next/.env.example
@@ -1,8 +1,7 @@
 NEXT_PUBLIC_ENV=development
 
 # Public URL / domain URL
-NEXT_PUBLIC_BASE_URL=http://localhost:3000
-
+NEXT_PUBLIC_BASE_URL=
 
 # Email
 EMAIL_HOST=;
