--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -26,6 +26,7 @@
     "react-hook-form": "^7.46.1",
     "react-i18next": "^12.3.1",
     "server-only": "^0.0.1",
+    "sharp": "^0.32.6",
     "ui": "*",
     "utils": "*"
   },
