--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,16 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "globalDependencies": ["**/.env.development"],
+  "globalEnv": [
+    "NEXT_PUBLIC_ENV",
+    "NEXT_PUBLIC_BASE_URL",
+    "EMAIL_HOST",
+    "EMAIL_PORT",
+    "EMAIL_USER",
+    "EMAIL_PASSWORD",
+    "EMAIL_TO",
+    "NEXT_PUBLIC_GOOGLE_TAG_MANAGER"
+  ],
   "pipeline": {
     "start": {
       "dependsOn": ["^start"],
