--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -19,7 +19,7 @@
     "i18next": "^23.4.6",
     "i18next-browser-languagedetector": "^7.0.2",
     "i18next-resources-to-backend": "^1.1.4",
-    "next": "^14.0.2",
+    "next": "14.0.3",
     "nodemailer": "^6.9.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
